{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 372,
  "lineage": "4b7f7f80-4dbd-0329-dc75-7a9e920f38f0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "database_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:943804152805:instance/i-0364eba9e1948ab52",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0364eba9e1948ab52",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops-assignment-4",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07c70b446cfe40f93",
            "private_dns": "ip-10-0-3-161.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.161",
            "public_ip": "34.228.116.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00f671c1a1ac3b48a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f19151ce0c27965d",
            "tags": {
              "Name": "DataBase"
            },
            "tags_all": {
              "Name": "DataBase"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0027e7e62a1e19a78"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "aws_security_group.devops_assignment_4_sg",
            "aws_subnet.private_1",
            "aws_vpc.devops_assignment_4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:943804152805:instance/i-0f9e562e01478c4c5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f9e562e01478c4c5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops-assignment-4",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d630726114ef2262",
            "private_dns": "ip-10-0-1-87.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.87",
            "public_ip": "54.164.249.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bb49b663ecc5131b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d5ab09e989749f15",
            "tags": {
              "Name": "Web_Server"
            },
            "tags_all": {
              "Name": "Web_Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0027e7e62a1e19a78"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "aws_security_group.devops_assignment_4_sg",
            "aws_subnet.public_1",
            "aws_vpc.devops_assignment_4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devops_assignment_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:943804152805:internet-gateway/igw-0c878cdb9e7dc0a75",
            "id": "igw-0c878cdb9e7dc0a75",
            "owner_id": "943804152805",
            "tags": {
              "Name": "devops-assignment-4-internet-gateway"
            },
            "tags_all": {
              "Name": "devops-assignment-4-internet-gateway"
            },
            "vpc_id": "vpc-08cfdc5a3730034a7"
          },
          "dependencies": [
            "aws_vpc.devops_assignment_4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:943804152805:route-table/rtb-06f5f0ddaab621644",
            "id": "rtb-06f5f0ddaab621644",
            "owner_id": "943804152805",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c878cdb9e7dc0a75",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-assignment-4-public-route-table"
            },
            "tags_all": {
              "Name": "devops-assignment-4-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08cfdc5a3730034a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.devops_assignment_4",
            "aws_vpc.devops_assignment_4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a2e8236d89ce661",
            "route_table_id": "rtb-06f5f0ddaab621644",
            "subnet_id": "subnet-0d5ab09e989749f15"
          },
          "dependencies": [
            "aws_internet_gateway.devops_assignment_4",
            "aws_route_table.public_route_table",
            "aws_subnet.public_1",
            "aws_vpc.devops_assignment_4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e429c740f5a25f8a",
            "route_table_id": "rtb-06f5f0ddaab621644",
            "subnet_id": "subnet-0175aa4834e4bfe8f"
          },
          "dependencies": [
            "aws_internet_gateway.devops_assignment_4",
            "aws_route_table.public_route_table",
            "aws_subnet.public_2",
            "aws_vpc.devops_assignment_4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops_assignment_4_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:943804152805:security-group/sg-0027e7e62a1e19a78",
            "description": "Security group for devops assignment 4",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0027e7e62a1e19a78",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "devops-assignment-4-sg",
            "name_prefix": "",
            "owner_id": "943804152805",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-assignment-4-sg"
            },
            "tags_all": {
              "Name": "devops-assignment-4-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08cfdc5a3730034a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops_assignment_4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:943804152805:subnet/subnet-0f19151ce0c27965d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f19151ce0c27965d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "943804152805",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cs423-devops-private-1"
            },
            "tags_all": {
              "Name": "cs423-devops-private-1"
            },
            "vpc_id": "vpc-08cfdc5a3730034a7"
          },
          "dependencies": [
            "aws_vpc.devops_assignment_4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:943804152805:subnet/subnet-08f429004e7ca78b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f429004e7ca78b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "943804152805",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cs423-devops-private-2"
            },
            "tags_all": {
              "Name": "cs423-devops-private-2"
            },
            "vpc_id": "vpc-08cfdc5a3730034a7"
          },
          "dependencies": [
            "aws_vpc.devops_assignment_4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:943804152805:subnet/subnet-0d5ab09e989749f15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5ab09e989749f15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "943804152805",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cs423-devops-public-1"
            },
            "tags_all": {
              "Name": "cs423-devops-public-1"
            },
            "vpc_id": "vpc-08cfdc5a3730034a7"
          },
          "dependencies": [
            "aws_vpc.devops_assignment_4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:943804152805:subnet/subnet-0175aa4834e4bfe8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0175aa4834e4bfe8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "943804152805",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cs423-devops-public-2"
            },
            "tags_all": {
              "Name": "cs423-devops-public-2"
            },
            "vpc_id": "vpc-08cfdc5a3730034a7"
          },
          "dependencies": [
            "aws_vpc.devops_assignment_4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops_assignment_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:943804152805:vpc/vpc-08cfdc5a3730034a7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06d1e750a799a1f3c",
            "default_route_table_id": "rtb-050eb03cf9092bdb1",
            "default_security_group_id": "sg-00e60fdce9a4bc1af",
            "dhcp_options_id": "dopt-0820e06aa59c61f09",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08cfdc5a3730034a7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-050eb03cf9092bdb1",
            "owner_id": "943804152805",
            "tags": {
              "Name": "devops-assignment-4"
            },
            "tags_all": {
              "Name": "devops-assignment-4"
            }
          }
        }
      ]
    }
  ]
}